# enterprise_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: setup.md
src/enterprise_app/: main.py
src/enterprise_app/api/: __init__.py
src/enterprise_app/api/v1/: endpoints.py
src/enterprise_app/core/: config.py  logging.py
src/enterprise_app/services/: automation.py
src/tests/: test_endpoints.py
tests/: test_endpoints.py
tests/integration/: test_automation.py
